--- a/TeamDevelopmentFiles/Margret/Newcode-Copy1.ipynb
+++ b/TeamDevelopmentFiles/Margret/Newcode-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
       "22   Better Homes and Gardens Real Estate Gary Greene  $ 2,150,000  \n",
       "23                                    Zuri Properties  $ 1,997,000  \n",
       "24                                Bonning Real Estate  $ 1,258,000  \n",
-      "3.0576071739196777\n"
+      "6.326157808303833\n"
      ]
     }
    ],
@@ -150,18 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-61d30c48d0ed>, line 40)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-61d30c48d0ed>\"\u001b[0;36m, line \u001b[0;32m40\u001b[0m\n\u001b[0;31m    return(resultset)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def har_homes():\n",
     "    urls = [\"https://www.har.com/mapsearch/?subdivisions=NorthWest+Park+place&region_id=1&for_sale=1\",\n",
@@ -199,11 +190,10 @@
     "    with open('homes3.csv', 'w+',newline='') as csvFile:\n",
     "        writer = csv.writer(csvFile)\n",
     "        writer.writerow(['Address', 'Price', 'Days on Market', 'Agent', 'Office', 'Neighborhood'])\n",
-    "    for home in resultset:\n",
-    "        writer.writerow([home['address'], home['price'],home['days'], home['agent'], home['office'], home['neighborhood']\n",
+    "        for home in resultset:\n",
+    "            writer.writerow([home['address'], home['price'],home['days'], home['agent'], home['office'], home['neighborhood']])\n",
     "\n",
-    "return(resultset)\n",
-    "    "
+    "har_homes()"
    ]
   },
   {
