removed $ and , from price field

--- a/TeamDevelopmentFiles/Margret/Newcode-Copy1.ipynb
+++ b/TeamDevelopmentFiles/Margret/Newcode-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
       "22   Better Homes and Gardens Real Estate Gary Greene  $ 2,150,000  \n",
       "23                                    Zuri Properties  $ 1,997,000  \n",
       "24                                Bonning Real Estate  $ 1,258,000  \n",
-      "6.326157808303833\n"
+      "3.0576071739196777\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,15 +185,129 @@
     "            home_details['office'] = home.find('div', {'class': 'capitalize ellipse'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ')\n",
     "            home_details['neighborhood'] = homes['neighborhood']['subdivisions']\n",
     "            resultset.append(home_details)\n",
-    "    \n",
-    "    \n",
-    "    with open('homes3.csv', 'w+',newline='') as csvFile:\n",
-    "        writer = csv.writer(csvFile)\n",
-    "        writer.writerow(['Address', 'Price', 'Days on Market', 'Agent', 'Office', 'Neighborhood'])\n",
-    "        for home in resultset:\n",
-    "            writer.writerow([home['address'], home['price'],home['days'], home['agent'], home['office'], home['neighborhood']])\n",
     "\n",
-    "har_homes()"
+    "\n",
+    "\n",
+    "            \n",
+    "    \n",
+    "#     with open('homes3.csv', 'w+',newline='') as csvFile:\n",
+    "#     writer = csv.writer(csvFile)\n",
+    "#     writer.writerow(['Address', 'Price', 'Days_on_Market', 'Agent', 'Office', 'Neighborhood'])\n",
+    "#     for home in resultset:\n",
+    "#         writer.writerow([home['address'], home['price'],home['days'], home['agent'], home['office'], home['neighborhood']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       address              agent days           neighborhood  \\\n",
+      "0     9827 Golden Prairie Lane   Isaias Contreras    6   NorthWest Park place   \n",
+      "1         6035 Cascadera Drive      Phuong Nguyen   35   NorthWest Park place   \n",
+      "2         10110 Fallmont Court    Alexander Ebner    8   NorthWest Park place   \n",
+      "3           5822 Wickover Lane   Ruben Villarreal    5   NorthWest Park place   \n",
+      "4     12035 Lismore Lake Drive    Mitchell Haynes   55   lismore lake estates   \n",
+      "5     12151 Lismore Lake Drive    Jennifer Ciulla   44   lismore lake estates   \n",
+      "6        11918 Galentine Point      Amjad Mushtaq  175   lismore lake estates   \n",
+      "7       13910 Springmint Drive         John Prell    5  lakewood oaks estates   \n",
+      "8           13718 Pegasus Road           Young Le   23  lakewood oaks estates   \n",
+      "9           13511 Pegasus Road    Teresa Goralski   29  lakewood oaks estates   \n",
+      "10      13106 Springmint Court       Evan Compean  115  lakewood oaks estates   \n",
+      "11        14011 Pegasus Circle      Mark Raisbeck  213  lakewood oaks estates   \n",
+      "12          13618 Pegasus Road  Stephanie Martens    9  lakewood oaks estates   \n",
+      "13     11207 Barker West Drive   Darrell Anderson  129             Riata West   \n",
+      "14     10923 Barker View Drive     Jimmy Franklin   18             Riata West   \n",
+      "15     10902 Barker View Drive     Claudia Ocadiz    2             Riata West   \n",
+      "16    17923 Cypress Side Drive     Cameron Namazi   27             Riata West   \n",
+      "17    17951 Branch Creek Drive     Candice Harris   12             Riata West   \n",
+      "18  18030 Riata Crossing Drive      Cesar Ramirez   80             Riata West   \n",
+      "19     10915 Barker View Drive      Alian Johnson    4             Riata West   \n",
+      "20    11115 Riata Canyon Drive    Allison Fontana    1             Riata West   \n",
+      "21     16810 Saddle Ridge Pass   William Phillips   16   Saddle Ridge Estates   \n",
+      "22     17203 Saddle Ridge Pass       Clint Nabors  164   Saddle Ridge Estates   \n",
+      "23     16510 Saddle Ridge Pass      Sharon Vaughn  134   Saddle Ridge Estates   \n",
+      "24     16703 Saddle Ridge Pass       Mark Bonning   27   Saddle Ridge Estates   \n",
+      "\n",
+      "                                               office     price  \n",
+      "0                           Keller Williams Signature    195000  \n",
+      "1                                BlueRoof Real Estate    195000  \n",
+      "2   Coldwell Banker United, Realtors - Bellaire Of...    170000  \n",
+      "3                                    RE/MAX Integrity    169990  \n",
+      "4                                           BuyBroker    349900  \n",
+      "5                              RE/MAX Fine Properties    329900  \n",
+      "6                                          Fast Homes    289900  \n",
+      "7                                    Creekview Realty    615000  \n",
+      "8                           Texas Independence Realty    529000  \n",
+      "9    Better Homes and Gardens Real Estate Gary Greene    499500  \n",
+      "10                        Champions Real Estate Group    499500  \n",
+      "11                            RE/MAX Elite Properties    465000  \n",
+      "12   Better Homes and Gardens Real Estate Gary Greene    450000  \n",
+      "13                                    Nino Properties    298799  \n",
+      "14                                     eXp Realty LLC    225000  \n",
+      "15                              Blake Richards Realty    224900  \n",
+      "16                                      Summit Realty    224500  \n",
+      "17                                   CA Modern Realty    198500  \n",
+      "18                                         Vylla Home    189900  \n",
+      "19                        Champions Real Estate Group    179999  \n",
+      "20                                Texas Realty Select    179900  \n",
+      "21                           John Daugherty, Realtors   4999500  \n",
+      "22   Better Homes and Gardens Real Estate Gary Greene   2150000  \n",
+      "23                                    Zuri Properties   1997000  \n",
+      "24                                Bonning Real Estate   1258000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from pprint import pprint\n",
+    "\n",
+    "from urllib import parse\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "urls = [\"https://www.har.com/mapsearch/?subdivisions=NorthWest+Park+place&region_id=1&for_sale=1\",\n",
+    "        \"https://www.har.com/mapsearch/?subdivisions=lismore+lake+estates&for_sale=1\",\n",
+    "       \"https://www.har.com/mapsearch/?subdivisions=lakewood+oaks+estates&region_id=1&for_sale=1\",\n",
+    "       \"https://www.har.com/mapsearch/?subdivisions=Riata+West&region_id=1&for_sale=1\",\n",
+    "       \"https://www.har.com/mapsearch/?subdivisions=Saddle+Ridge+Estates&region_id=1&for_sale=1\"]\n",
+    "\n",
+    "all_homes = []\n",
+    "\n",
+    "for index,url in enumerate(urls):\n",
+    "    html = requests.get(url).text\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    homes = soup.findAll('div', {\"class\": \"map_prop_item pointer\"})\n",
+    "    neighborhood = dict(parse.parse_qsl(parse.urlsplit(url).query))\n",
+    "    home_info = dict()\n",
+    "    home_info['home_url'] = homes\n",
+    "    home_info['neighborhood'] = neighborhood    \n",
+    "    all_homes.append(home_info)\n",
+    "\n",
+    "resultset = []\n",
+    "\n",
+    "# for homes in all_homes:\n",
+    "for homes in all_homes:\n",
+    "    for home in homes['home_url']:\n",
+    "        home_details = dict()\n",
+    "        home_details['address'] = home.find('div', {'class': 'mpi_info'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').split('\\n')[0]\n",
+    "        home_details['price'] = home.find('div', {'class': 'price'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').replace(',','').replace('$','')\n",
+    "        home_details['days'] = home.find('span', {'class': 'bold'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ')\n",
+    "        home_details['agent'] = home.find('div', {'class': 'capitalize bold'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ')\n",
+    "        home_details['office'] = home.find('div', {'class': 'capitalize ellipse'}).text.strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ').strip('\\n\\r\\t\": ')\n",
+    "        home_details['neighborhood'] = homes['neighborhood']['subdivisions']\n",
+    "        resultset.append(home_details)                                   \n",
+    "                                           \n",
+    "info = pd.DataFrame(resultset)\n",
+    "print(info)\n",
+    "                                           "
    ]
   },
   {
