pulled images from ML

--- a/Temporary/ARIMA-Copy1.ipynb
+++ b/Temporary/ARIMA-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -56,27 +56,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1/1/00 0:00</th>\n",
+       "      <th>2000-01-01</th>\n",
        "      <td>2.08</td>\n",
        "      <td>1.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2/1/00 0:00</th>\n",
+       "      <th>2000-02-01</th>\n",
        "      <td>1.48</td>\n",
        "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3/1/00 0:00</th>\n",
+       "      <th>2000-03-01</th>\n",
        "      <td>1.47</td>\n",
        "      <td>0.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4/1/00 0:00</th>\n",
+       "      <th>2000-04-01</th>\n",
        "      <td>4.88</td>\n",
        "      <td>3.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5/1/00 0:00</th>\n",
+       "      <th>2000-05-01</th>\n",
        "      <td>5.15</td>\n",
        "      <td>7.16</td>\n",
        "    </tr>\n",
@@ -85,27 +85,28 @@
        "</div>"
       ],
       "text/plain": [
-       "             Sagemont  Bammel\n",
-       "Date                         \n",
-       "1/1/00 0:00      2.08    1.64\n",
-       "2/1/00 0:00      1.48    1.00\n",
-       "3/1/00 0:00      1.47    0.96\n",
-       "4/1/00 0:00      4.88    3.64\n",
-       "5/1/00 0:00      5.15    7.16"
+       "            Sagemont  Bammel\n",
+       "Date                        \n",
+       "2000-01-01      2.08    1.64\n",
+       "2000-02-01      1.48    1.00\n",
+       "2000-03-01      1.47    0.96\n",
+       "2000-04-01      4.88    3.64\n",
+       "2000-05-01      5.15    7.16"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data.index = pd.to_datetime(data.index)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -138,23 +139,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1/1/00 0:00</th>\n",
+       "      <th>2000-01-01</th>\n",
        "      <td>1.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2/1/00 0:00</th>\n",
+       "      <th>2000-02-01</th>\n",
        "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3/1/00 0:00</th>\n",
+       "      <th>2000-03-01</th>\n",
        "      <td>0.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4/1/00 0:00</th>\n",
+       "      <th>2000-04-01</th>\n",
        "      <td>3.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5/1/00 0:00</th>\n",
+       "      <th>2000-05-01</th>\n",
        "      <td>7.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -162,16 +163,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             Bammel\n",
-       "Date               \n",
-       "1/1/00 0:00    1.64\n",
-       "2/1/00 0:00    1.00\n",
-       "3/1/00 0:00    0.96\n",
-       "4/1/00 0:00    3.64\n",
-       "5/1/00 0:00    7.16"
+       "            Bammel\n",
+       "Date              \n",
+       "2000-01-01    1.64\n",
+       "2000-02-01    1.00\n",
+       "2000-03-01    0.96\n",
+       "2000-04-01    3.64\n",
+       "2000-05-01    7.16"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -216,23 +217,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1/1/00 0:00</th>\n",
+       "      <th>2000-01-01</th>\n",
        "      <td>1.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2/1/00 0:00</th>\n",
+       "      <th>2000-02-01</th>\n",
        "      <td>1.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3/1/00 0:00</th>\n",
+       "      <th>2000-03-01</th>\n",
        "      <td>0.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4/1/00 0:00</th>\n",
+       "      <th>2000-04-01</th>\n",
        "      <td>3.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5/1/00 0:00</th>\n",
+       "      <th>2000-05-01</th>\n",
        "      <td>7.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -240,16 +241,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             Bammel\n",
-       "Date               \n",
-       "1/1/00 0:00    1.64\n",
-       "2/1/00 0:00    1.00\n",
-       "3/1/00 0:00    0.96\n",
-       "4/1/00 0:00    3.64\n",
-       "5/1/00 0:00    7.16"
+       "            Bammel\n",
+       "Date              \n",
+       "2000-01-01    1.64\n",
+       "2000-02-01    1.00\n",
+       "2000-03-01    0.96\n",
+       "2000-04-01    3.64\n",
+       "2000-05-01    7.16"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +327,7 @@
        "2000-05-01      7.16"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
        "2000-05-01      5.15"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +484,7 @@
        "2000-05-01      5.15"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -524,12 +525,13 @@
    "source": [
     "plt.figure(figsize=(10,6))\n",
     "Bammel_data['Rainfall'].plot();\n",
-    "# plt.ylabel('Rainfall')"
+    "# plt.ylabel('Rainfall')\n",
+    "plt.savefig('MLPlots/Bammel_observed.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -548,12 +550,13 @@
    "source": [
     "plt.figure(figsize=(10,6))\n",
     "Sagemont_data['Rainfall'].plot();\n",
-    "# plt.ylabel('Rainfall')"
+    "# plt.ylabel('Rainfall')\n",
+    "plt.savefig('MLPlots/Sagemont_observed.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -576,6 +579,7 @@
     "\n",
     "decomposition = sm.tsa.seasonal_decompose(Bammel_data['Rainfall'], model='additive')\n",
     "fig = decomposition.plot()\n",
+    "plt.savefig('MLPlots/Bammel_decomposed.png')\n",
     "plt.show()"
    ]
   },
@@ -701,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -732,12 +736,13 @@
     "ax.set_ylabel('Rainfall')\n",
     "plt.legend()\n",
     "\n",
+    "plt.savefig('MLPlots/Bammel_onestepforecast.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -814,12 +819,13 @@
     "ax.set_ylabel('Rainfall')\n",
     "\n",
     "plt.legend()\n",
+    "plt.savefig('MLPlots/Bammel_forecast.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +898,7 @@
        "4 2000-05-01      5.15    7.16"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +979,7 @@
        "4 2000-05-01    7.16"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1058,7 @@
        "4 2000-05-01      5.15"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1091,8 @@
     "plt.plot(full_data['Date'], full_data['Sagemont'], 'b-', label = 'Sagemont')\n",
     "plt.plot(full_data['Date'], full_data['Bammel'], 'r-', label = 'Bammel')\n",
     "plt.xlabel('Date'); plt.ylabel('Rainfall'); plt.title('Rainfall of Bammel Forest and Sagemont')\n",
-    "plt.legend();"
+    "plt.legend();\n",
+    "plt.savefig('MLPlots/BammelvsSagemont.png')"
    ]
   },
   {
@@ -1204,7 +1211,8 @@
    "source": [
     "plt.figure(figsize=(18, 6))\n",
     "Bammel_model.plot(Bammel_forecast, xlabel = 'Date', ylabel = 'Rainfall')\n",
-    "plt.title('Bammel Rainfall Predictions');"
+    "plt.title('Bammel Rainfall Predictions');\n",
+    "plt.savefig('MLPlots/BammelvsSagemont.png')"
    ]
   },
   {
