--- a/Temporary/ARIMA-Copy1.ipynb
+++ b/Temporary/ARIMA-Copy1.ipynb
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1212,12 +1212,12 @@
     "plt.figure(figsize=(18, 6))\n",
     "Bammel_model.plot(Bammel_forecast, xlabel = 'Date', ylabel = 'Rainfall')\n",
     "plt.title('Bammel Rainfall Predictions');\n",
-    "plt.savefig('MLPlots/BammelvsSagemont.png')"
+    "plt.savefig('MLPlots/BammelRainfallPredictions.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,8 @@
    "source": [
     "plt.figure(figsize=(18, 6))\n",
     "Sagemont_model.plot(Sagemont_forecast, xlabel = 'Date', ylabel = 'Rainfall')\n",
-    "plt.title('Sagemont Rainfall Predictions');"
+    "plt.title('Sagemont Rainfall Predictions');\n",
+    "plt.savefig('MLPlots/SagemontRainfallPredictions.png')"
    ]
   },
   {
@@ -1505,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1527,8 @@
     "plt.plot(forecast['Date'], forecast['Bammel_trend'], 'b-')\n",
     "plt.plot(forecast['Date'], forecast['Sagemont_trend'], 'r-')\n",
     "plt.legend(); plt.xlabel('Date'); plt.ylabel('Rainfall')\n",
-    "plt.title('Bammel Forest vs. Sagemont Rainfall Trend');"
+    "plt.title('Bammel Forest vs. Sagemont Rainfall Trend');\n",
+    "plt.savefig('MLPlots/BammelvsSagemondTrend.png')"
    ]
   },
   {
@@ -1557,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1572,12 +1574,13 @@
     }
    ],
    "source": [
-    "Bammel_model.plot_components(Bammel_forecast);"
+    "Bammel_model.plot_components(Bammel_forecast);\n",
+    "plt.savefig('MLPlots/BammelMonths.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1595,8 @@
     }
    ],
    "source": [
-    "Sagemont_model.plot_components(Sagemont_forecast);"
+    "Sagemont_model.plot_components(Sagemont_forecast);\n",
+    "plt.savefig('MLPlots/SagemontMonths.png')"
    ]
   },
   {
