MS updated scrape

--- a/Temporary/ARIMA-Copy1.ipynb
+++ b/Temporary/ARIMA-Copy1.ipynb
@@ -1506,6 +1506,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast.to_csv(\"forecast_data.csv\", encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
    "outputs": [
