--- a/Temporary/Lesly's scrape.ipynb
+++ b/Temporary/Lesly's scrape.ipynb
@@ -2,54 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No results given for https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\n"
+      "No results given for https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\n",
+      "[{'neighborhood': 'riverwood estates', 'address': '12403 Swan River Drive', 'days': '6', 'agent': 'Juan Miranda', 'office': 'Mission Realty', 'price': '18000'}, {'neighborhood': 'forest shadows', 'address': '4706 Broadmark Lane', 'days': '13', 'agent': 'Cellina Stokes', 'office': 'Crowne Realty', 'price': '175000'}, {'neighborhood': 'aldine estates', 'address': '15202 Claypool Street', 'days': '58', 'agent': 'Rosa Gonzalez', 'office': 'REALM Real Estate Professionals - North Houston', 'price': '774000'}, {'neighborhood': 'greenbranch', 'address': '1430 Old Greens Road', 'days': '6', 'agent': 'Rose Nava', 'office': 'JEA Properties', 'price': '135000'}, {'neighborhood': 'castlewood', 'address': '2517 Woodgate Street', 'days': '56', 'agent': 'Gina Lopez', 'office': 'Loft Realty', 'price': '225000'}]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'neighborhood': 'riverwood estates',\n",
-       "  'address': '12403 Swan River Drive',\n",
-       "  'days': '3',\n",
-       "  'agent': 'Juan Miranda',\n",
-       "  'office': 'Mission Realty',\n",
-       "  'price': '18000'},\n",
-       " {'neighborhood': 'forest shadows',\n",
-       "  'address': '4706 Broadmark Lane',\n",
-       "  'days': '10',\n",
-       "  'agent': 'Cellina Stokes',\n",
-       "  'office': 'Crowne Realty',\n",
-       "  'price': '175000'},\n",
-       " {'neighborhood': 'aldine estates',\n",
-       "  'address': '15202 Claypool Street',\n",
-       "  'days': '55',\n",
-       "  'agent': 'Rosa Gonzalez',\n",
-       "  'office': 'REALM Real Estate Professionals - North Houston',\n",
-       "  'price': '774000'},\n",
-       " {'neighborhood': 'greenbranch',\n",
-       "  'address': '1430 Old Greens Road',\n",
-       "  'days': '6',\n",
-       "  'agent': 'Rose Nava',\n",
-       "  'office': 'JEA Properties',\n",
-       "  'price': '135000'},\n",
-       " {'neighborhood': 'castlewood',\n",
-       "  'address': '2517 Woodgate Street',\n",
-       "  'days': '53',\n",
-       "  'agent': 'Gina Lopez',\n",
-       "  'office': 'Loft Realty',\n",
-       "  'price': '225000'}]"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,38 +28,43 @@
     "\n",
     "\n",
     "def har_homes():\n",
-    "    urls = [\"https://www.har.com/riverwood-estates/homes-for-sale/2377?sort=listdate+desc\",\n",
-    "            \"https://www.har.com/forest-shadows/homes-for-sale/4585?sort=listdate+desc\",\n",
-    "           \"https://www.har.com/aldine-estates/homes-for-sale/1917?sort=listdate+desc\",\n",
-    "           \"https://www.har.com/greenbranch/homes-for-sale/1921?sort=listdate+desc\",\n",
-    "           \"https://www.har.com/castlewood/homes-for-sale/2078?sort=listdate+desc\",\n",
-    "           \"https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\"]\n",
+    "urls = [\"https://www.har.com/riverwood-estates/homes-for-sale/2377?sort=listdate+desc\",\n",
+    "        \"https://www.har.com/forest-shadows/homes-for-sale/4585?sort=listdate+desc\",\n",
+    "       \"https://www.har.com/aldine-estates/homes-for-sale/1917?sort=listdate+desc\",\n",
+    "       \"https://www.har.com/greenbranch/homes-for-sale/1921?sort=listdate+desc\",\n",
+    "       \"https://www.har.com/castlewood/homes-for-sale/2078?sort=listdate+desc\",\n",
+    "       \"https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\"]\n",
     "\n",
-    "    all_homes = []\n",
+    "all_homes = []\n",
     "\n",
-    "    #iterate through the urls\n",
-    "    for url in urls:\n",
-    "        html = requests.get(url).text\n",
-    "        soup = BeautifulSoup(html, \"html.parser\")\n",
-    "        homes = soup.find('div', class_= \"prop_list\").text\n",
-    "        neighborhood = url.split('/')[3].replace('-',' ')\n",
-    "        home_info = dict()\n",
-    "        home_info ['neighborhood'] = neighborhood\n",
+    "#iterate through the urls\n",
+    "for url in urls:\n",
+    "    html = requests.get(url).text\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    homes = soup.find('div', class_= \"prop_list\")\n",
+    "    neighborhood = url.split('/')[3].replace('-',' ')\n",
+    "    home_info = dict()\n",
+    "    home_info ['neighborhood'] = neighborhood\n",
     "\n",
-    "        try:\n",
-    "            all_info = soup.find('div', class_= 'mpi_info') \n",
-    "            price = soup.find('div', class_= 'mpi_img')\n",
-    "            home_info['address']= all_info.findAll('span', class_= 'bold')[0].text\n",
-    "            home_info['days']= all_info.findAll('span', class_= 'bold')[1].text\n",
-    "            home_info['agent'] = all_info.findAll('a', class_='bold')[0].text\n",
-    "            home_info['office'] = all_info.findAll('a', class_= 'bold')[1].text\n",
-    "            home_info['price']= price.find('div','price').text.replace(',','').replace('$','').strip()\n",
-    "            all_homes.append(home_info)\n",
-    "        except:\n",
-    "            print(\"No results given for \" + url)\n",
-    "            continue\n",
-    "            \n",
-    "    return all_homes\n",
+    "    try:\n",
+    "        all_info = soup.find('div', class_= 'mpi_info') \n",
+    "        price = soup.find('div', class_= 'mpi_img')\n",
+    "        full_address = all_info.findAll('a', class_= 'address')[0].text\n",
+    "        split_address = full_address.split(',')\n",
+    "        home_info['address']= split_address[0].strip()\n",
+    "        home_info['city']= split_address[1].strip()\n",
+    "        state_zip = split_address[2].split(' ')\n",
+    "        home_info['state'] = state_zip[1].strip()\n",
+    "        home_info['zip'] = state_zip[2].strip()\n",
+    "        home_info['days']= all_info.findAll('span', class_= 'bold')[1].text\n",
+    "        home_info['agent'] = all_info.findAll('a', class_='bold')[0].text\n",
+    "        home_info['office'] = all_info.findAll('a', class_= 'bold')[1].text\n",
+    "        home_info['price']= price.find('div','price').text.replace(',','').replace('$','').strip()\n",
+    "        all_homes.append(home_info)\n",
+    "    except:\n",
+    "        print(\"No results given for \" + url)\n",
+    "        continue\n",
+    "\n",
     "\n",
     "\n",
     "def threader(job_func):\n",
