--- a/Temporary/Untitled.ipynb
+++ b/Temporary/Untitled.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "riverwood estates\n",
-      "forest shadows\n",
-      "aldine estates\n",
-      "greenbranch\n",
-      "castlewood\n",
-      "bamwood terrace\n"
+      "No results given for https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\n",
+      "[{'neighborhood': 'riverwood estates', 'address': '12403 Swan River Drive', 'city': 'Houston', 'state': 'TX', 'zip': '77050', 'days': '6', 'agent': 'Juan Miranda', 'office': 'Mission Realty', 'price': '18000'}, {'neighborhood': 'forest shadows', 'address': '4706 Broadmark Lane', 'city': 'Humble', 'state': 'TX', 'zip': '77338', 'days': '13', 'agent': 'Cellina Stokes', 'office': 'Crowne Realty', 'price': '175000'}, {'neighborhood': 'aldine estates', 'address': '15202 Claypool Street', 'city': 'Houston', 'state': 'TX', 'zip': '77032', 'days': '58', 'agent': 'Rosa Gonzalez', 'office': 'REALM Real Estate Professionals - North Houston', 'price': '774000'}, {'neighborhood': 'greenbranch', 'address': '1430 Old Greens Road', 'city': 'Houston', 'state': 'TX', 'zip': '77032', 'days': '6', 'agent': 'Rose Nava', 'office': 'JEA Properties', 'price': '135000'}, {'neighborhood': 'castlewood', 'address': '2517 Woodgate Street', 'city': 'Houston', 'state': 'TX', 'zip': '77039', 'days': '56', 'agent': 'Gina Lopez', 'office': 'Loft Realty', 'price': '225000'}]\n"
      ]
     }
    ],
@@ -40,10 +36,37 @@
     "       \"https://www.har.com/bamwood-terrace/homes-for-sale/3693?sort=listdate+desc\"]\n",
     "\n",
     "all_homes = []\n",
-    "for i in urls:\n",
-    "    neighborhood = i.split('/')[3].replace('-',' ')\n",
-    "    print(neighborhood)\n",
-    "    "
+    "\n",
+    "for url in urls:\n",
+    "    html = requests.get(url).text\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    homes = soup.find('div', class_= \"prop_list\")\n",
+    "    neighborhood = url.split('/')[3].replace('-',' ')\n",
+    "    home_info = dict()\n",
+    "    home_info ['neighborhood'] = neighborhood\n",
+    "    \n",
+    "  \n",
+    "    try:\n",
+    "        all_info = soup.find('div', class_= 'mpi_info') \n",
+    "        price = soup.find('div', class_= 'mpi_img')\n",
+    "        full_address = all_info.findAll('a', class_= 'address')[0].text\n",
+    "        split_address = full_address.split(',')\n",
+    "        home_info['address']= split_address[0].strip()\n",
+    "        home_info['city']= split_address[1].strip()\n",
+    "        state_zip = split_address[2].split(' ')\n",
+    "        home_info['state'] = state_zip[1].strip()\n",
+    "        home_info['zip'] = state_zip[2].strip()\n",
+    "        home_info['days']= all_info.findAll('span', class_= 'bold')[1].text\n",
+    "        home_info['agent'] = all_info.findAll('a', class_='bold')[0].text\n",
+    "        home_info['office'] = all_info.findAll('a', class_= 'bold')[1].text\n",
+    "        home_info['price']= price.find('div','price').text.replace(',','').replace('$','').strip()\n",
+    "        all_homes.append(home_info)\n",
+    "    except:\n",
+    "        print(\"No results given for \" + url)\n",
+    "        continue\n",
+    "\n",
+    "print(all_homes)\n",
+    "\n"
    ]
   },
   {
